--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -9,18 +9,17 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": "./",
-    "paths": {
-      "@/*": [
-        "src/*"
-      ]
-    },
+    // shadcn/ui CLI 가 여기서 import alias 를 찾을 수 있도록, 최소한의 alias 설정 추가
+    "baseUrl": ".",              // 현재 디렉토리를 import base 경로로 설정
+    "paths": {                   // import 시 "@/..." -> "./src/..."로 매핑
+      "@/*": ["./src/*"]
+    }
   },
   "include": ["src", "electron", "test"],
   "references": [{ "path": "./tsconfig.node.json" }]
