[client] Clips 1차 구현: 기본 CRUD 및 사이드바 UI

--- a/client/package.json
+++ b/client/package.json
@@ -15,28 +15,42 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build && electron-builder",
+    "rebuild-native": "electron-rebuild -f -w better-sqlite3",
     "preview": "vite preview",
     "pretest": "vite build --mode=test",
     "test": "vitest run",
     "lint": "eslint ."
   },
   "dependencies": {
-    "electron-updater": "^6.3.9"
+    "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@tabler/icons-react": "^3.29.0",
+    "better-sqlite3": "^11.8.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "electron-store": "^10.0.1",
+    "electron-updater": "^6.3.9",
+    "i18next": "^24.2.2",
     "lucide-react": "^0.474.0",
+    "react-i18next": "^15.4.0",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@playwright/test": "^1.48.2",
+    "@types/better-sqlite3": "^7.6.12",
+    "@types/node": "^22.12.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^8.22.0",
     "@typescript-eslint/parser": "^8.22.0",
-    "@vitejs/plugin-react": "^4.3.3",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "electron": "^33.2.0",
     "electron-builder": "^24.13.3",
+    "electron-rebuild": "^3.2.9",
     "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
@@ -44,12 +58,12 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
-    "postcss": "^8.4.49",
+    "postcss": "^8.5.1",
     "postcss-import": "^16.1.0",
     "prettier": "^3.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.4.2",
     "vite": "^5.4.11",
     "vite-plugin-electron": "^0.29.0",
