[client] i18n 다국어 지원 구현

--- a/client/package.json
+++ b/client/package.json
@@ -28,9 +28,11 @@
     "better-sqlite3": "^11.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "electron-localshortcut": "^3.2.1",
     "electron-store": "^10.0.1",
     "electron-updater": "^6.3.9",
     "i18next": "^24.2.2",
+    "i18next-fs-backend": "^2.6.0",
     "lucide-react": "^0.474.0",
     "react-i18next": "^15.4.0",
     "tailwind-merge": "^2.6.0",
